--- a/package.json
+++ b/package.json
@@ -5,42 +5,42 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@blocks/kit": "",
-    "@emotion/core": "",
-    "babel-preset-gatsby": "",
-    "gatsby": "",
-    "gatsby-plugin-image": "",
-    "gatsby-plugin-manifest": "",
-    "gatsby-plugin-offline": "",
-    "gatsby-plugin-react-helmet": "",
-    "gatsby-plugin-sharp": "",
-    "gatsby-source-filesystem": "",
-    "gatsby-source-strapi": "",
-    "gatsby-transformer-sharp": "",
-    "moment": "",
-    "path-browserify": "",
-    "process": "",
-    "prop-types": "",
-    "react": "",
-    "react-dom": "",
-    "react-helmet": "",
-    "react-markdown": "",
-    "react-moment": ""
+    "@blocks/kit": "0.0.28",
+    "@emotion/core": "^10.0.28",
+    "babel-preset-gatsby": "^1.3.0",
+    "gatsby": "^3.3.0",
+    "gatsby-plugin-image": "^1.2.1",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-source-filesystem": "3.3.0",
+    "gatsby-source-strapi": "^0.0.12",
+    "gatsby-transformer-sharp": "^3.3.0",
+    "moment": "^2.26.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-markdown": "^4.3.1",
+    "react-moment": "^0.9.7"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "",
-    "@typescript-eslint/parser": "",
-    "babel-eslint": "",
-    "eslint": "",
-    "eslint-config-prettier": "",
-    "eslint-config-react-app": "",
-    "eslint-plugin-flowtype": "",
-    "eslint-plugin-import": "",
-    "eslint-plugin-jsx-a11y": "",
-    "eslint-plugin-prettier": "",
-    "eslint-plugin-react": "",
-    "eslint-plugin-react-hooks": "",
-    "prettier": ""
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
+    "babel-eslint": "10.x",
+    "eslint": "6.x",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "4.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "2.x",
+    "prettier": "^2.1.1"
   },
   "keywords": [
     "gatsby"
@@ -48,7 +48,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop --open -H 0.0.0.0",
+    "develop": "gatsby develop --open",
     "dev": "npm run develop",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
