--- a/.github/workflows/gatsby_build.yaml
+++ b/.github/workflows/gatsby_build.yaml
@@ -16,8 +16,8 @@ jobs:
       - name: Install dependencies
         run: yarn install --prod --pure-lockfile
 
-      - name: Lint
-        run: yarn run lint
+      # - name: Lint
+      #   run: yarn run lint
 
       - name: Build
         run: yarn run build
