--- a/.github/workflows/gatsby_build.yaml
+++ b/.github/workflows/gatsby_build.yaml
@@ -1,6 +1,6 @@
 name: Update blog
 
-on: [push, repository_dispatch]
+on: push
 
 jobs:
   update:
@@ -21,3 +21,15 @@ jobs:
 
       - name: Build
         run: yarn run build
+
+      - name: Commit files
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -m "Add changes" -a
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
