--- a/.github/workflows/gatsby_build.yaml
+++ b/.github/workflows/gatsby_build.yaml
@@ -26,6 +26,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
+          git status
           git commit -m "Add changes" -a
 
       - name: Push changes
