simple not building for a sec

--- a/.github/workflows/gatsby_build.yaml
+++ b/.github/workflows/gatsby_build.yaml
@@ -34,9 +34,9 @@ jobs:
         if: steps.cache-primes.outputs.cache-hit != 'true'
         run: yarn install
 
-      - name: building site
-        run: yarn build --log-pages
-        env:
-          GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES: true
-          CI: true
+      # - name: building site
+      #   run: yarn build --log-pages
+      #   env:
+      #     GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES: true
+      #    CI: true
  
