--- a/.eslintrc
+++ b/.eslintrc
@@ -3,4 +3,8 @@
     "prettier/prettier": ["error", {}]
   },
   "extends": ["react-app", "plugin:prettier/recommended"]
+
+  "overrides": [
+    { "files": ["src/assets/css/*"] }
+  ]
 }
