--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,5 @@
   "rules": {
     "prettier/prettier": ["error", {}]
   },
-  "extends": ["react-app", "plugin:prettier/recommended"],
-
-  "overrides": [
-    { "files": ["src/assets/css/*"] }
-  ]
+  "extends": ["react-app", "plugin:prettier/recommended"]
 }
