fix issue in package.json

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "type": "module",
   "dependencies": {
     "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0";
+    "graphql-request": "^3.4.0",
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1"
