--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@apollo/client": "^3.3.15",
+    "graphql": "^15.5.0",
     "@sveltejs/kit": "next",
-    "svelte": "^3.34.0",
+    "svelte": "^3.37.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
@@ -19,8 +21,6 @@
   },
   "type": "module",
   "dependencies": {
-    "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0",
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1"
