--- a/package.json
+++ b/package.json
@@ -5,24 +5,21 @@
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
-    "lint": "prettier --check . && eslint --ignore-path .gitignore .",
+    "lint": "eslint --ignore-path .gitignore .",
     "format": "prettier --write ."
   },
   "devDependencies": {
     "@apollo/client": "^3.3.15",
-    "graphql": "^15.5.0",
     "@sveltejs/kit": "next",
-    "svelte": "^3.37.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "svelte": "^3.38.3",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0"
+    "prettier": "~2.3.2",
+    "prettier-plugin-svelte": "^2.3.1"
   },
   "type": "module",
   "dependencies": {
     "@fontsource/fira-mono": "^4.2.2",
-    "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
   }
 }
