--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "ccbash-web-frontend",
+  "name": "todo",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
-    "lint": "eslint --ignore-path .gitignore .",
-    "format": "prettier --write ."
+    "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
     "@apollo/client": "^3.3.15",
     "@sveltejs/kit": "next",
-    "svelte": "^3.38.3",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "prettier": "~2.3.2",
-    "prettier-plugin-svelte": "^2.3.1"
+    "prettier-plugin-svelte": "^2.3.1",
+    "svelte": "^3.38.3"
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/fira-mono": "^4.2.2"
+    "@fontsource/fira-mono": "^4.2.2",
+    "@lukeed/uuid": "^2.0.0",
+    "cookie": "^0.4.1",
+    "graphql": "^14.0.0 || ^15.0.0",
+    "diff-match-patch": "^1.0.5"
   }
 }
