--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,5 +6,5 @@
 			"$lib/*": ["src/lib/*"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"]
+	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte", "src/routes/api/article/latest3.js_old", "src/routes/api/article/[slug].js_old"]
 }
