--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
+    "diff-match-patch": "^1.0.5",
     "graphql": "^14.0.0 || ^15.0.0",
-    "diff-match-patch": "^1.0.5"
+    "snarkdown": "^2.0.0"
   }
 }
