--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@apollo/client": "^3.3.15",
+    "@apollo/client": "^3.4.10",
     "@sveltejs/kit": "next",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "prettier": "~2.3.2",
-    "prettier-plugin-svelte": "^2.3.1",
-    "svelte": "^3.38.3"
+    "prettier-plugin-svelte": "^2.4.0",
+    "svelte": "^3.42.4"
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/fira-mono": "^4.2.2",
+    "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
     "diff-match-patch": "^1.0.5",
-    "graphql": "^14.0.0 || ^15.0.0",
+    "graphql": "^15.5.1",
     "snarkdown": "^2.0.0"
   }
 }
