--- a/.github/workflows/svelte_build.yaml
+++ b/.github/workflows/svelte_build.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '12.x'
 
-      - name: caching gatsby & node modules
+      - name: caching npm & node modules
         uses: actions/cache@v2
         with:
           path: |
@@ -31,8 +31,8 @@ jobs:
       - name: dependencies
         run: npm install
 
-      - name: linting
-        run: npm run lint
+      # - name: linting
+      #   run: npm run lint
 
       - name: building site
         run: npm run build
