--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "todo",
-  "version": "0.0.1",
+  "name": "ccbash web",
+  "version": "0.0.11",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
