linting and prettier everything

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,16 @@
 {
-	"compilerOptions": {
-		"baseUrl": ".",
-		"paths": {
-			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"]
-		}
-	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte", "src/routes/api/article/latest3.js_old", "src/routes/api/article/[slug].js_old"]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "$lib": ["src/lib"],
+      "$lib/*": ["src/lib/*"]
+    }
+  },
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.js",
+    "src/**/*.svelte",
+    "src/routes/api/article/latest3.js_old",
+    "src/routes/api/article/[slug].js_old"
+  ]
 }
