--- a/.github/workflows/svelte_build.yaml
+++ b/.github/workflows/svelte_build.yaml
@@ -30,8 +30,8 @@ jobs:
       - name: dependencies
         run: npm install
 
-      # - name: linting
-      #   run: npm run lint
+      - name: linting
+        run: npm run lint
 
       - name: building site
         run: npm run build
